# vote-match

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  PR2_REVIEW_REPORT.md  PR_REVIEW.md  README.md  SECURITY_REVIEW.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
alembic/: README  env.py
alembic/versions/: 2026_02_04_1307_initial_schema_with_voter_model.py  2026_02_04_1330_add_geocode_results_table.py  2026_02_04_1537_add_county_commission_districts_table_.py  2026_02_04_1621_add_district_comparison_columns_to_.py  2026_02_07_0900_add_district_boundaries_and_voter_.py  2026_02_10_1034_fix_remove_redundant_index_on_district_.py  2026_02_10_1053_add_psc_district_type_to_voters_table.py  2026_02_10_1055_add_psc_district_to_voters_table.py  2026_02_10_1145_add_county_district_type_and_county_.py  2026_02_10_1153_expand_county_name_column_to_support_.py  (+1 more)
data/: bibbcc-2022-shape-file.zip.sha512.txt  bibbsb-2022-shape-file.zip.sha512.txt  congress-2023-shape.zip.sha512.txt  counties-by-districts-2023.csv.sha512.txt  counties-by-leg-and-cong-districts--2023.pdf.sha512.txt  gaprec_2024-website-shapefile.zip.sha512.txt  house-2023-shape.zip.sha512.txt  psc-2022.zip.sha512.txt  senate-2023-shape-file.zip.sha512.txt  tl_2025_us_county.zip.sha512.txt
docs/: CLI_README_BEST_PRACTICES.md  GA_Maps.md  PROJECT_SUMMARY.md  blog-post.md  nominatim.md
src/vote_match/: __init__.py  (+12 more)
tests/: __init__.py  conftest.py  test_csv_reader.py  test_district_tracking.py  test_geocoder.py  test_migrations.py  test_processing.py
(+12 files in other folders)
