[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vote-match"
version = "0.1.0"
description = "A Python tool for processing voter registration records for GIS applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geoalchemy2>=0.18.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0",
    "typer[all]>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
vote-match = "vote_match.cli:app"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/vote_match --cov-report=term-missing --cov-report=html"
